# runrooter

./: .gitignore  README.md
CASE2026/: paper
CASE2026/_extract/hopperHFAcase2026-main/: .gitignore  CMakeLists.txt  README.md  main.cpp
CASE2026/_extract/hopperHFAcase2026-main/hopper_controller/: STANCE_VELOCITY_CONVERGENCE.md  check_exp3.py  forward_kinematics.py  mujoco_lcm_fake_robot.py  plot_paper_figures.py  plot_paper_v2.py  plot_prop_pwm_pitch_roll.py  plot_test5_push.py  plot_test5_z_xy.py  record_modee_serial_1d.sh  record_modee_serial_2d.sh  record_modee_serial_forward.sh  record_modee_serial_forward_leg_only.sh  record_modee_serial_forward_sideforce.sh  record_modee_serial_fwd.sh  record_modee_serial_inplace.sh  right_stick_pwm1_1100.py  run_modee.py
CASE2026/_extract/hopperHFAcase2026-main/hopper_controller/modee/: analyze_modee_csv.py  core.py  lcm_controller.py
CASE2026/_extract/hopperHFAcase2026-main/hopper_controller/modee/controllers/: motor_utils.py  wbc_full_qp_osqp.py  wbc_qp_osqp.py
CASE2026/_extract/hopperHFAcase2026-main/hopper_controller/modee/controllers/mpc/: MPC_DERIVATION.md  README.md  __init__.py  mit_mpc.py  mit_mpc_condensed_grf.py
CASE2026/_extract/hopperHFAcase2026-main/hopper_controller/tools/: analyze_modee_csv_batch.py  check_mpc_status.py  visualize_mpc_structure.py
CASE2026/_extract/hopperHFAcase2026-main/hopper_lcm_types/: camera_image_lcmt.lcm  motor_pwm_lcmt.lcm
CASE2026/_extract/hopperHFAcase2026-main/hopper_lcm_types/lcm_types/cpp/: gamepad_lcmt.hpp  hopper_cmd_lcmt.hpp  hopper_data_lcmt.hpp  hopper_imu_lcmt.hpp  motor_pwm_lcmt.hpp
CASE2026/_extract/hopperHFAcase2026-main/hopper_lcm_types/lcm_types/lcmtypes/: gamepad_lcmt.java  hopper_cmd_lcmt.java  hopper_data_lcmt.java  hopper_imu_lcmt.java  motor_pwm_lcmt.java
CASE2026/_extract/hopperHFAcase2026-main/hopper_lcm_types/lcm_types/python/: gamepad_lcmt.py  hopper_cmd_lcmt.py  hopper_data_lcmt.py
CASE2026/_extract/hopperHFAcase2026-main/hopper_lcm_types/scripts/: make_types.sh
CASE2026/_extract/hopperHFAcase2026-main/include/hardware/: VeloxF7Wrapper.h  ak60_controller.h  hopper_hardware.hpp  kalman_filter.h
CASE2026/_extract/hopperHFAcase2026-main/src/hardware/: ak60_controller.cpp  hopper_hardware.cpp  kalman_filter.cpp  utility.cpp
imu_bridge_jetson/: igmp_querier.py  jetson_power_monitor.py  px4_bridge.py  px4_dds_bridge.py  run_px4_bridge.sh  run_px4_dds_bridge.sh  run_xrce_agent.sh
lidar_perception/: README.md  odom_lcm_bridge.py  patrol.py  perception_config.yaml  record_waypoint.py  relocalize.py  run_lidar_stack.sh  save_map.sh  waypoints.yaml
lower_driver_jetson/: CMakeLists.txt  README.md  main.cpp  rebuild.sh
lower_driver_jetson/Lpms_IMU/include/: ImuWrapper.h
lower_driver_jetson/Lpms_IMU/src/: ImuWrapper.cpp
lower_driver_jetson/hopper_lcm_types/: hopper_cmd_lcmt.lcm  rm_esc_cmd_lcmt.lcm
lower_driver_jetson/hopper_lcm_types/lcm_types/cpp/: gamepad_lcmt.hpp  hopper_cmd_lcmt.hpp  hopper_data_lcmt.hpp  hopper_imu_lcmt.hpp  motor_pwm_lcmt.hpp  rm_esc_cmd_lcmt.hpp  rm_esc_data_lcmt.hpp  wheel_cmd_lcmt.hpp
lower_driver_jetson/hopper_lcm_types/lcm_types/python/: __init__.py  camera_image_lcmt.py  hopper_cmd_lcmt.py  hopper_imu_lcmt.py  motor_pwm_lcmt.py  rm_esc_cmd_lcmt.py  wheel_cmd_lcmt.py
lower_driver_jetson/hopper_lcm_types/scripts/: make_types.sh
lower_driver_jetson/include/hardware/: ak60_controller.h  dm_wheel_controller.h  hopper_hardware.hpp  tri_balance_controller.h  utility.h
lower_driver_jetson/src/common/: PeriodicTask.cpp
lower_driver_jetson/src/hardware/: VeloxF7Wrapper.cpp  ak60_controller.cpp  ak60_controller.cpp.bak.20260701_120920  dm_wheel_controller.cpp  hopper_hardware.cpp  tri_balance_controller.cpp  utility.cpp
lower_driver_jetson/xbox_driver/: CMakeLists.txt
pac_nmpc_demo/: README.md  plot_results.py  run_demo.py
pac_nmpc_demo/hopper_pac/: controller.py  conventions.py  leg.py  motor_table.py  pac_nmpc.py  sim.py  srb_rollout.py
pac_nmpc_demo/model/: hopper_serial.xml  hopper_serial_1d.xml
rlmujoco3rsr/: README.md  _align_check.py  _analyze_hop.py  _att_check.py  _cao_calib.py  _demo_fly.py  _eval_cpu.py  _eval_flip.py  _eval_leg.py  _eval_real.py  _fit_jsim.py  _leg_dir_check.py  _mjx_check.py  _modee_calib.py  _prop_moment_check.py  _prop_pd_check.py  _render_full.py  _render_sim2sim.py  _rep_1d.sh  _run_compress_check.sh  _run_frictioncone_sweep.sh  _run_mode12_ab.sh  _run_modee_1d_test.sh  _run_modee_2d_test.sh  _run_modee_sim_test.sh  _run_prop_att_test.sh  _smoke.py  _snap_fly.py  _sweep_att.sh  _sweep_modee.sh  _torque_check.py  _tune_check.py  _tune_noprop.sh  _tune_noprop2.sh  _verify2.py  cao_fake_robot.py  check_mjx.py  deploy_map.py  footv5.STL  joint.STL  (+17 more)
rlmujoco3rsr/policies/: hop_policy_hwcal.params  (+2 more)
scripts/: connect_and_start.sh  damiao_monitor.py  hopperleg_README.md
services/: 99-canable.rules  canable-watchdog.service  canable.service  canable2.service  canable_watchdog.sh  hopper-driver.service  hopper-upper.service  jetson-power.service  px4-bridge.service  px4-dds-bridge.service  xrce-agent.service
(+65 files in other folders)
